# zoomboard_server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.raspbian  README.md  build_project.sh  config.json  input.json  linux_config.json  macos_config.json  output.json  play.sh  stream.sh  stream.sh.in  stream.supervisor.conf.in
cmake_modules/: FindFFMPEG.cmake  FindFFTW.cmake  FindLOG4CXX.cmake
linux/: input.json  output.json
mkbld/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
mkbld/src/: Makefile  cmake_install.cmake
nginx/: CMakeLists.txt  launch_nginx_docker.sh  launch_nginx_docker.sh.in  nginx.conf  nginx.conf.in
nginx_server/: README.md  nginx.conf  run.sh  stream.sh
nginx_server/html/: index.html
res/: CMakeLists.txt  input.json.in  logitech_c930.json  macbook_facetime.json  output_dual.json.in  output_single.json.in
res/Darwin/: input.json  output.json  output2.json  output_single.json  output_single_2.json
res/Linux/: input.json  output.json  output_single.json
src/: CMakeLists.txt  LibAVWrappers.cpp  LibAVWrappers.hpp  Media.cpp  Media.hpp  MediaReader.cpp  MediaReader.hpp  MediaWriter.cpp  MediaWriter.hpp  PerspectiveWarper.cpp  PerspectiveWarper.hpp  ProgramStatus.cpp  ProgramStatus.hpp  Stream.cpp  Stream.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp  ThreadManager.cpp  ThreadManager.hpp  ThreadsafeFrame.cpp  ThreadsafeFrame.hpp  Transcoder.cpp  Transcoder.hpp  calibrate.cxx  common.cpp  common.hpp  common.hpp.in  correct_perspective.cpp  correct_perspective.hpp  create_markers.cxx  libav2opencv.hpp  main.cxx  math.hpp  math.ipp  version.h.in
src/include/: log.hpp
